--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Trail Results</h2>
     <ul id="trailList"></ul>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_PLACEHOLDER&libraries=places,geometry&callback=initMap"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=API&libraries=places,geometry&callback=initMap"></script>
 
     <script>
         // Initialize map
