--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <h2>Trail Results</h2>
     <ul id="trailList"></ul>
 
-    <script defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_PLACEHOLDER_API_KEY&libraries=places,geometry&callback=initMap"></script>
-
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=${{ secrets.GOOGLE_API_KEY }}&libraries=places,geometry&callback=initMap"></script>
 
     <script>
         // Initialize map
@@ -66,8 +65,8 @@
             else return 10; 
         }
 
-                // Function to clear the trail list
-                function clearTrailList() {
+        // Function to clear the trail list
+        function clearTrailList() {
             var trailList = document.getElementById('trailList');
             trailList.innerHTML = ''; // Clear all child elements
         }
@@ -85,8 +84,7 @@
                         location: userLocation,
                         radius: radius,
                         type: ['park'] // Search for parks assuming trails will be under parks
-                    }, 
-                    function callback(results, status) {
+                    }, function callback(results, status) {
                         if (status === google.maps.places.PlacesServiceStatus.OK) { 
                             var trails = [];
 
@@ -139,8 +137,8 @@
             // Add an event listener to the marker to show an InfoWindow when clicked
             google.maps.event.addListener(marker, 'click', function() {
                 var infowindow = new google.maps.InfoWindow({
-                    content: `${place.name}<br>Distance: ${distance.toFixed(2)} miles<br>Rating: ${place.rating ? place.rating : 'No rating available'}` // Display the place's name, distance, and rating in the InfoWindow
-                });          //not complicated, just take note of syntax
+                    content: `${place.name}<br>Distance: ${distance.toFixed(2)} miles<br>Rating: ${place.rating ? place.rating : 'No rating available'}`
+                });
                 infowindow.open(map, marker);
 
                 // Make sure infowindows close after 2 seconds
@@ -167,7 +165,7 @@
             distanceText.textContent = ` - ${distance.toFixed(2)} miles`;
 
             // Add rating
-            var ratingText = document.createElement('span'); //uses a span element to display if there is no rating available
+            var ratingText = document.createElement('span');
             ratingText.textContent = ` - Rating: ${place.rating ? place.rating : 'No rating available'}`;
 
             listItem.appendChild(link);
